# nhl-bigquery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
nhl_bigquery/: __init__.py  cli.py  client.py  runs.py  schema.py  time_utils.py  writer.py
nhl_bigquery/boxscore/: __init__.py  schema.py  transform.py
nhl_bigquery/docs/: __init__.py  renderers.py  taxonomy.py
nhl_bigquery/games/: __init__.py  schema.py  transform.py
nhl_bigquery/officials/: __init__.py  schema.py  transform.py
nhl_bigquery/players/: __init__.py  schema.py  transform.py  writer.py
nhl_bigquery/plays/: __init__.py  merge.py  schema.py  strength.py  transform.py
nhl_bigquery/shifts/: __init__.py  schema.py  transform.py
nhl_bigquery/standings/: __init__.py  schema.py  transform.py
nhl_bigquery/verify/: __init__.py  base.py  internal.py  nhl_api.py
scripts/: capture_fixture.py
tests/: conftest.py
tests/fixtures/games/2024020001/: boxscore.json  landing.json  play-by-play.json  right-rail.json  shift-charts.json
tests/fixtures/players/: 8473419.json  8478402.json
tests/fixtures/score/: 2024-10-08.json
tests/fixtures/standings/: 2024-10-08.json
tests/integration/: __init__.py  test_sync_one_game.py
tests/unit/: test_boxscore_schema.py  test_cli_docs.py  test_cli_players.py  test_cli_sync.py  test_cli_verify.py  test_games_schema.py  test_nhl_client.py  test_officials_schema.py  test_other_transforms.py  test_players_schema.py  test_players_transform.py  test_players_writer.py  test_plays_merge.py  test_plays_schema.py  test_plays_transform.py  test_renderers.py  test_runs.py  test_schema_invariants.py  test_shifts_schema.py  test_standings_schema.py  test_strength_state.py  test_time_utils.py  test_verify_internal.py  test_verify_nhl_api.py  test_writer.py
(+10 files in other folders)
