[project]
name = "nhl-bigquery"
version = "0.1.0"
description = "NHL play-by-play → BigQuery: idempotent ingestion + LLM-friendly docs + verification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jason Blahovec" }]
requires-python = ">=3.11"
keywords = ["nhl", "hockey", "bigquery", "data-engineering", "play-by-play"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31,<3.0",
    "pandas>=2.0,<3.0",
    "google-cloud-bigquery>=3.20,<4.0",
    "pyarrow>=15.0,<19.0",
    "db-dtypes>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "build>=1.2.0",
    "responses>=0.25",
]

[project.scripts]
nhl-bigquery = "nhl_bigquery.cli:main"

[project.urls]
Homepage = "https://github.com/blahovec-labs/nhl-bigquery"
Issues = "https://github.com/blahovec-labs/nhl-bigquery/issues"
Changelog = "https://github.com/blahovec-labs/nhl-bigquery/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nhl_bigquery"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the live NHL API; skip in CI",
]
